--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>The Psychic Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+
     <!-- Added a link to the jQuery Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
-    <!-- Added a link to css stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Added a link to bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <script type="text/javascript" src=assets/javascript/game.js></script>
+    <!-- Added a link to bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>The Psychic Game</title>
+
+
 </head>
 
 <body>
@@ -22,89 +23,16 @@
     <h1> The Psychic Game</h1>
     <h2>Guess The Letter That I Am Thinking Of</h2>
     <div>
-      <h3 id="directions-text">Press any letter to start playing!</h3>
-      <p id="userchoice-text"></p>
-      <p id="computerchoice-text"></p>
-      <p id="wins-text"></p>
-      <p id="losses-text"></p>
-      <p id="guesses-text"></p>
-      <p id="letters-text"></p>
+        <h3 id="directions-text">Press any letter to start playing!</h3>
+        <p id="userchoice-text"></p>
+        <p id="wins-text"></p>
+        <p id="losses-text"></p>
+        <p id="guesses-text"></p>
+        <p id="letters-text"></p>
     </div>
-  
-    <script type="text/javascript">
-      // Creates an array that lists out all of the options (a-z).
-      var computerChoices = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'];
-  
-      // Creating variables to hold the letters guesses, number of wins, losses, and guesses left.
-      var lettersGuessed = [];
-      var wins = 0;
-      var losses = 0;
-      var guesses = 9;
-  
-  
-      // Create variables that hold references to the places in the HTML where we want to display things.
-      var directionsText = document.getElementById("directions-text");
-      var userChoiceText = document.getElementById("userchoice-text");
-      var computerChoiceText = document.getElementById("computerchoice-text");
-      var lettersGuessedText = document.getElementById("letters-text");
-      var winsText = document.getElementById("wins-text");
-      var lossesText = document.getElementById("losses-text");
-      var guessesText = document.getElementById("guesses-text");
-  
-            // Randomly chooses a choice from the options array. This is the Computer's guess.
-        function computerPick() {
-          computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-        }
-       computerPick();
-  
-      // This function is run whenever the user presses a key.
-      document.onkeyup = function (event) {
-  
-  
-  
-       // Function to reset the game
-      function resetGame() {
-          computerPick();
-          lettersGuessed = [];
-          guesses = 9;
-      }
-       // Determines which key was pressed.
-        var userGuess = event.key;
-        lettersGuessed.push(userGuess);
-  
-  
-  
-        // Reworked our code from last step to use "else if" instead of lots of if statements.
-  
-        // This logic determines the outcome of the game (win/loss/tie), and increments the appropriate number
-  
-        if ((userGuess === computerGuess)) {
-          wins++;
-          resetGame();
-        } else {
-          guesses--;
-        }
-  
-        if (guesses === 0) {
-          losses++;
-          resetGame();
-        }
-  
-  
-        // Hide the directions
-        directionsText.textContent = "";
-  
-        // Display the user and computer guesses, and wins/losses/ties.
-        userChoiceText.textContent = "You just chose the letter: " + userGuess;
-        // computerChoiceText.textContent = "The computer chose the letter: " + computerGuess;
-        lettersGuessedText.textContent = "You have already guessed these letters: " + lettersGuessed;
-        winsText.textContent = "wins: " + wins;
-        lossesText.textContent = "losses: " + losses;
-        guessesText.textContent = "guesses remaining: " + guesses;
-  
-      };
-  
-    </script>
-  
+
 </body>
-    </html>
+
+<script src="./assets/javascript/game.js"></script>
+
+</html>
