Commented out link to sytle.css. Updated index.html to include Bootstrap syling to make the game more user friendly as it's now easier to see. Small corrections made to README.md.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- Added a link to the jQuery Library -->
+    <!-- Link to the jQuery Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Added a link to bootstrap -->
+    <!-- Link to bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!--Link to style sheet which isn't currently being used-->
+    <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
 
     <title>The Psychic Game</title>
 
@@ -20,15 +23,23 @@
 
 <body>
 
-    <h1> The Psychic Game</h1>
-    <h2>Guess The Letter That I Am Thinking Of</h2>
+    <h1 class="pl-sm-5 display-1"> The Psychic Game</h1>
+
+    <h2 class="pl-sm-5">Guess The Letter That I Am Thinking Of</h2>
+
+    <hr>
+
     <div>
-        <h3 id="directions-text">Press any letter to start playing!</h3>
-        <p id="userchoice-text"></p>
-        <p id="wins-text"></p>
-        <p id="losses-text"></p>
-        <p id="guesses-text"></p>
-        <p id="letters-text"></p>
+        <h3 class="pl-sm-5" id="directions-text">Press any letter to start playing!</h3>
+        <h4 class="pl-sm-5" id="userchoice-text"></h4>
+        <br>
+        <h4 class="pl-sm-5" id="wins-text"></h4>
+        <br>
+        <h4 class="pl-sm-5" id="losses-text"></h4>
+        <br>
+        <h4 class="pl-sm-5" id="guesses-text"></h4>
+        <br>
+        <h4 class="pl-sm-5" id="letters-text"></h4>
     </div>
 
 </body>
